evaluation/rq1/sota/mythril/execution_logs/0x0xc3################################89E92_poly.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xc3################################89E92_poly/EdgeTokenConstructorUpgrade.sol:332:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity 0.5.12;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.5.12"

